force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/sfpegMassAction__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store a configuration of the sfpegMassActionCmp LWC component.
It contains the detailed layout of the component and actions to be proposed.</description>
    <label>sfpegMassAction</label>
    <pluralLabel>sfpegMassActions</pluralLabel>
</CustomObject>