force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionClass__c.field-meta.xml
<CustomField>
    <fullName>ActionClass__c</fullName>
    <defaultValue>&apos;sfpegMassActionSoqlDml_SVC&apos;</defaultValue>
    <description>Name of the Apex Class implementing the Action logic</description>
    <inlineHelpText>Name of the Apex Class implementing the Action logic</inlineHelpText>
    <label>Action Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>