force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionConfig__c.field-meta.xml
<CustomField>
    <fullName>ActionConfig__c</fullName>
    <description>Configuration of the action execution logic, according to the configured Action Class.</description>
    <inlineHelpText>Configuration of the action execution logic, according to the configured Action Class.</inlineHelpText>
    <label>Action Config</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>