force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionForm__c.field-meta.xml
<CustomField>
    <fullName>ActionForm__c</fullName>
    <description>Configuration of the action form presented before executing the action</description>
    <inlineHelpText>Configuration of the action form presented before executing the action</inlineHelpText>
    <label>Action Form</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>