force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>ActionLabel__c</fullName>
    <defaultValue>&apos;Execute&apos;</defaultValue>
    <description>Label for the main action displayed in the component</description>
    <inlineHelpText>Label for the main action displayed in the component</inlineHelpText>
    <label>Action Label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>