force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionMessage__c.field-meta.xml
<CustomField>
    <fullName>ActionMessage__c</fullName>
    <description>Message displayed while executing the main action, to provide explanation about the process being executed.</description>
    <inlineHelpText>Message displayed while executing the main action, to provide explanation about the process being executed.</inlineHelpText>
    <label>Action Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>