force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionTemplate__c.field-meta.xml
<CustomField>
    <fullName>ActionTemplate__c</fullName>
    <defaultValue>&apos;{&quot;sobjectApiName&quot;:&quot;Task&quot;,&quot;subject&quot;:&quot;TEST&quot;}&apos;</defaultValue>
    <description>Configuration of the Record template to be used for rows pushed in action execution logic</description>
    <inlineHelpText>Configuration of the Record template to be used for rows pushed in action execution logic</inlineHelpText>
    <label>Action Template</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>