force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/ActionTitle__c.field-meta.xml
<CustomField>
    <fullName>ActionTitle__c</fullName>
    <defaultValue>&apos;Action Execution&apos;</defaultValue>
    <description>Text message displayed as action form title</description>
    <inlineHelpText>Text message displayed as action form title</inlineHelpText>
    <label>Action Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>