force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/DisplayActions__c.field-meta.xml
<CustomField>
    <fullName>DisplayActions__c</fullName>
    <description>Configuration of the actions displayed in the component (main one + data preparation forms)</description>
    <inlineHelpText>Configuration of the actions displayed in the component (main one + data preparation forms)</inlineHelpText>
    <label>Display Actions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>