force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/DisplayConfig__c.field-meta.xml
<CustomField>
    <fullName>DisplayConfig__c</fullName>
    <description>Configuration of the data-table displayed within the component (see lightning-datatable standard component).</description>
    <inlineHelpText>Configuration of the data-table displayed within the component (see lightning-datatable standard component).</inlineHelpText>
    <label>Display Config</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>