force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/DisplayContext__c.field-meta.xml
<CustomField>
    <fullName>DisplayContext__c</fullName>
    <description>Context information to be provided for filtering or action execution (based on current User or Record)</description>
    <inlineHelpText>Context information to be provided for filtering or action execution (based on current User or Record)</inlineHelpText>
    <label>Context</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>