force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/FilterBatchSize__c.field-meta.xml
<CustomField>
    <fullName>FilterBatchSize__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rows to be processed per batch in row filter logic. 0 means all rows processed at once.</description>
    <inlineHelpText>Number of rows to be processed per batch in row filter logic. 0 means all rows processed at once.</inlineHelpText>
    <label>Filter Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>