force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/FilterClass__c.field-meta.xml
<CustomField>
    <fullName>FilterClass__c</fullName>
    <defaultValue>&apos;sfpegMassActionSoqlDml_SVC&apos;</defaultValue>
    <description>Name of the Apex Class implementing the Filter logic</description>
    <inlineHelpText>Name of the Apex Class implementing the Filter logic</inlineHelpText>
    <label>Filter Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>