force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/FilterConfig__c.field-meta.xml
<CustomField>
    <fullName>FilterConfig__c</fullName>
    <description>Configuration of the filter logic, according to the configured Filter Class.</description>
    <inlineHelpText>Configuration of the filter logic, according to the configured Filter Class.</inlineHelpText>
    <label>Filter Config</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>