force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/FilterTemplate__c.field-meta.xml
<CustomField>
    <fullName>FilterTemplate__c</fullName>
    <defaultValue>&apos;ID&apos;</defaultValue>
    <description>Configuration of the data structure to be provided to the filter function.</description>
    <inlineHelpText>Configuration of the data structure to be provided to the filter function.</inlineHelpText>
    <label>Filter Template</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>