force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/FilterToDo__c.field-meta.xml
<CustomField>
    <fullName>FilterToDo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to activate the initial row filtering logic</description>
    <inlineHelpText>Flag to activate the initial row filtering logic</inlineHelpText>
    <label>Filter?</label>
    <type>Checkbox</type>
</CustomField>