force-app/main/sfpegMassActionCmp/objects/sfpegMassAction__mdt/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <description>Name of the custom permission controlling the access to the configuration record</description>
    <inlineHelpText>Name of the custom permission controlling the access to the configuration record</inlineHelpText>
    <label>Permission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>